--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
               <a href="./index.html" class="nav-link link">Студія</a>
             </li>
             <li class="nav-item">
-              <a href="./portfolio.html" class="nav-link link">Портфоліо</a>
+              <a href="./portfolio.html" class="nav-link link current">Портфоліо</a>
             </li>
             <li class="nav-item">
               <a href="" class="nav-link link">Контакти</a>
@@ -77,12 +77,19 @@
             <ul class="portfolio-list">
               <li class="projects-list-item">
                 <a href="" class="link projects-link">
+                  <div class="card-box">
                   <img
                     src="./images/project1.jpg"
                     alt="ноутбук"
                     width="370"
                     height="294"
                   />
+                  <div class="card-overlay">
+                    <p class="text-overlay">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                  </div>
+                  </div>
                   <div class="item-sign">
                     <h2 class="portfolio-sub-title">Технокряк</h2>
                     <p class="projects-text">Веб-сайт</p>
@@ -91,12 +98,19 @@
               </li>
               <li class="projects-list-item">
                 <a href="" class="link">
+                  <div class="card-box">
                   <img
                     src="./images/project2.jpg"
                     alt="баскетболисти"
                     width="370"
                     height="294"
                   />
+                   <div class="card-overlay">
+                    <p class="text-overlay">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                  </div>
+                  </div>
                   <div class="item-sign">
                     <h2 class="portfolio-sub-title">
                       Постер <span lang="en">New Orlean vs Golden Star</span>
@@ -107,12 +121,19 @@
               </li>
               <li class="projects-list-item">
                 <a href="" class="link">
+                  <div class="card-box">
                   <img
                     src="./images/project3.jpg"
                     alt="логотип ресторану"
                     width="370"
                     height="294"
                   />
+                  <div class="card-overlay">
+                    <p class="text-overlay">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                  </div>
+                  </div>
                   <div class="item-sign">
                     <h2 class="portfolio-sub-title">
                       Ресторан <span lang="en">Seafood</span>
@@ -123,12 +144,19 @@
               </li>
               <li class="projects-list-item">
                 <a href="" class="link">
+                  <div class="card-box">
                   <img
                     src="./images/project4.jpg"
                     alt="навушники"
                     width="370"
                     height="294"
                   />
+                  <div class="card-overlay">
+                    <p class="text-overlay">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                  </div>
+                  </div>
                   <div class="item-sign">
                     <h2 class="portfolio-sub-title">
                       Проєкт <span lang="en">Prime</span>
@@ -139,12 +167,19 @@
               </li>
               <li class="projects-list-item">
                 <a href="" class="link">
+                  <div class="card-box">
                   <img
                     src="./images/project5.jpg"
                     alt="дві коробки"
                     width="370"
                     height="294"
                   />
+                  <div class="card-overlay">
+                    <p class="text-overlay">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                  </div>
+                  </div>
                   <div class="item-sign">
                     <h2 class="portfolio-sub-title">
                       Проєкт <span lang="en">Boxes</span>
@@ -155,12 +190,19 @@
               </li>
               <li class="projects-list-item">
                 <a href="" class="link">
+                  <div class="card-box">
                   <img
                     src="./images/project6.jpg"
                     alt="монітор"
                     width="370"
                     height="294"
                   />
+                  <div class="card-overlay">
+                    <p class="text-overlay">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                  </div>
+                  </div>
                   <div class="item-sign">
                     <h2 class="portfolio-sub-title" lang="en">
                       Inspiration has no Borders
@@ -171,12 +213,19 @@
               </li>
               <li class="projects-list-item">
                 <a href="" class="link">
+                  <div class="card-box">
                   <img
                     src="./images/project7.jpg"
                     alt="журнал"
                     width="370"
                     height="294"
                   />
+                  <div class="card-overlay">
+                    <p class="text-overlay">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                  </div>
+                  </div>
                   <div class="item-sign">
                     <h2 class="portfolio-sub-title">
                       Видання <span lang="en">Limited Edition</span>
@@ -187,12 +236,19 @@
               </li>
               <li class="projects-list-item">
                 <a href="" class="link">
+                  <div class="card-box">
                   <img
                     src="./images/project8.jpg"
                     alt="бірка"
                     width="370"
                     height="294"
                   />
+                  <div class="card-overlay">
+                    <p class="text-overlay">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                  </div>
+                  </div>
                   <div class="item-sign">
                     <h2 class="portfolio-sub-title">
                       Проєкт <span lang="en">LAB</span>
@@ -203,12 +259,19 @@
               </li>
               <li class="projects-list-item">
                 <a href="" class="link">
+                  <div class="card-box">
                   <img
                     src="./images/project9.jpg"
                     alt="ноутбук"
                     width="370"
                     height="294"
                   />
+                  <div class="card-overlay">
+                    <p class="text-overlay">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                  </div>
+                  </div>
                   <div class="item-sign">
                     <h2 class="portfolio-sub-title" lang="en">
                       Growing Business
