--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <nav>
         <ul class="nav-list">
           <li class="nav-item">
-            <a href="./index.html" class="nav-link link">Студія</a>
+            <a href="./index.html" class="nav-link link current">Студія</a>
           </li>
           <li class="nav-item">
             <a href="./portfolio.html" class="nav-link link">Портфоліо</a>
@@ -50,7 +50,7 @@
             Ефективні рішення для <br />
             вашого бізнесу
           </h1>
-          <button type="button" class="hero-btn">Замовити послугу</button>
+          <button type="button" class="hero-btn" data-modal-open>Замовити послугу</button>
         </div>
       </section>
     
@@ -114,14 +114,23 @@
       <div class="container">
         <h2 class="title">Чим ми займаємося</h2>
         <ul class="activity-list padding-0">
-          <li>
+          <li class="activity-items">
             <img src="./images/box1.jpg" alt="Людина набирає текст" width="370" height="294" />
+            <div class="activity-label">
+            <p>Десктопні додатки</p>
+            </div>
           </li>
-          <li>
+          <li class="activity-items">
             <img src="./images/box2.jpg" alt="Людина за ноутбуком" width="370" height="294" />
+            <div class="activity-label">
+            <p>Мобільні додатки</p>
+            </div>
           </li>
-          <li>
+          <li class="activity-items">
             <img src="./images/box3.jpg" alt="Планшет в руці" width="370" height="294" />
+            <div class="activity-label">
+            <p>Дизайнерські рішення</p>
+            </div>
           </li>
         </ul>
       </div>
@@ -371,6 +380,16 @@
     </ul>
     </address>
   </footer>
+  <div class="backdrop is-hidden" data-modal>
+    <div class="modal">
+      <button class="modal-btn" data-modal-close>
+        <svg class="modal-icon" width="18px" height="18px">,
+                <use href="./images/icons.svg#close-icon"></use>,
+              </svg>
+      </button>
+    </div>
+  </div>
+  <script src="./js/modal.js"></script>
 </body>
 
 </html>
